--- a/Pages/Shared/_PostPartial.cshtml
+++ b/Pages/Shared/_PostPartial.cshtml
@@ -3,7 +3,7 @@
 <div class="post-container" data-post-id="@Model.PostID">
     <div class="post-header">
         <div class="user-info">
-            <img src="@(Model.UserProfileImageURL ?? "/images/default-avatar.png")" 
+            <img src="@(Model.UserProfilePicture ?? "/uploads/profile-pictures/user_1_20250723_110716_92e835da.jpeg")"
                  alt="@Model.UserName" 
                  class="user-avatar" />
             <div class="user-details">
