--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -169,9 +169,9 @@
                 <div class="post-user-info">
                     <a href="/UserProfile/${post.user?.id || ''}" class="user-link">
                         <div class="post-avatar">
-                            ${post.user?.avatar ? 
-                                `<img src="${post.user.avatar}" alt="${post.user.username}" />` :
-                                `<div class="avatar-placeholder">${(post.user?.username || 'U').charAt(0).toUpperCase()}</div>`
+                                    ${post.UserProfilePicture ?
+                                    `<img src="${post.UserProfilePicture}" alt="2" />` :
+                                        `<img src="${post.UserProfilePicture}"  style="width:100%;height:100%;border-radius:50%;object-fit:cover;" alt="alt" />`
                             }
                         </div>
                         <div class="user-details">
