post follow and lots more

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -44,6 +44,8 @@
     
     <!-- Auth Service -->
     <script src="~/js/auth-service.js"></script>
+    <!-- Follow Status Manager -->
+    <script src="~/js/follow-manager.js"></script>
     <!-- Comments System -->
     <script src="~/js/comments.js"></script>
     
