--- a/Pages/TestPost.cshtml
+++ b/Pages/TestPost.cshtml
@@ -128,7 +128,7 @@
 
 @section Scripts {
     <script src="~/js/posts.js"></script>
-    <script src="~/js/comments.js"></script>
+    <!-- comments.js is already loaded in _Layout.cshtml -->
     <script>
         // Mobile menu functions
         function toggleMobileMenu(postId) {
