--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -36,7 +36,7 @@
                     @await Component.InvokeAsync("PostCard", new PostCardViewModel 
                     { 
                         Post = post, 
-                        Context = PostContextFactory.CreateFeedContext(Model.HeaderData?.user, post, "all"),
+                        Context = PostContextFactory.CreateFeedContext(Model.HeaderData?.user, post, "all", Model.FollowStatusMap),
                         CurrentUser = Model.HeaderData?.user
                     })
                 }
